1.009  15 May 2010
   - Fix pod for get_user() and from_session() in Backend.pm, adding
     the missing $c param. Pass $c in from_session() through to get_user().
     Reported in https://rt.cpan.org/Ticket/Display.html?id=56983 with
     patch from Bjørn-Olav Strand.

1.008  02 April 2010
   - Allow for multiple uid values on a User object. See RT
     https://rt.cpan.org/Ticket/Display.html?id=51505
     and patch from Andrew Kirkpatrick.

1.007  19 Mar 2010
   - Store the user password for the ldap_connection method in an inside
     out hash rather than a closure so that the user object can be serialized
     with Storable as people are putting them in the session (RT#53279)

1.006  11 Dec 2009
   - Pass $c along to find_user method so overridden user_class users can
     get at models (or whatever crazy things they might do) (gphat)
   - Add an ldap_connection method to the user class, which will return
     an LDAP connection bound as the user who authenticated.
   - Trim trailing whitespace from submitted usernames otherwise we generate
     bad LDAP queries.

0.1005  30 April 2009
   - Stop throwing an exception when the lookup_user method fails
      to find a user and instead return undef. (t0m)
   - Add tests for above (t0m)
   - Change documentation which still refers to the old ::Plugin:: style
     auth system to use ->authenticate instead of ->login, and not say that
     you need to do things manually to have multiple stores. (t0m)

0.1004  21 Oct 2008
   - Add the ability to have the user inflated into a custom
     user class with the user_class option (t0m)
   - Add the ability for role lookup to be performed within
     the same (user) bind context that the user's password is
     checked in (t0m)

0.1003  10 Sept 2008
    - get entries in array context rather than scalar context, 
      allowing for multiple values. patch by scpham.
    - lc() to compare Net::LDAP results with supplied $id
      bug reported via RT #39113


0.1002  9 July 2008